[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version"]
name = "Bingo"
description = "Bingo, but you don't know where the numbers are on your grid."
readme = "README.md"
authors = [
    {name = "Petr Sluka"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "colorama",
]


[project.scripts]
bingo = "Bingo:main"
